--- a/client/accounts.html
+++ b/client/accounts.html
@@ -24,11 +24,23 @@
         </div>
     </header>
     <main >
+        <div class="headLog">
+            <div class="addAccount">
+            <h1>Add account</h1>
+            <form action="" method="POST">
+                <label for="text">Group ID:</label>
+                <input name="text" type="text" placeholder="example: 2" id="id" required="">
+
+                <button class="add" id="add">Add</button>
+            </form>
+        </div>
+    </div>
+
         <div class="accounts">
             <h1>Accouts</h1>
             <div class="block" id="account"></div>
         </div>
-        </div>
+        
     </main>
     
 </body>
